scrollbar issue fixed

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,12 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
 @property --gradient-angle{
   syntax: "<angle>";
   initial-value: 0deg;
